--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
       <!-- Add equations support -->
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     
     
     <meta charset='utf-8'>
