--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
 <h3>Introduction</h3>
 
-<p> Dynaphopy allows to calculate anharmonic phonon linewidhts and frequency shifts using the mode descomposition technique. To do that it uses a <a href="https://www.vasp.at">VASP</a> 
+<p> Dynaphopy allows to calculate anharmonic phonon linewidths and frequency shifts using the mode decomposition technique. To do that it uses a <a href="https://www.vasp.at">VASP</a> 
 or <a href="http://lammps.sandia.gov/">LAMMPS</a>  Molecular Dynamics (MD) trajectory and projects it onto a set of harmonic phonon modes obtained by <a href="http://phonopy.sourceforge.net">Phonopy</a>. 
-Afterwards the power spectrum is calculated usign <a href="https://en.wikipedia.org/wiki/Fourier_transform">Fourier transform</a> or <a href="https://mathworld.wolfram.com/MaximumEntropyMethod.html"> Maximum Entropy Method (MEM)</a> and the peaks are fitted 
+Afterwards the power spectrum is calculated using <a href="https://en.wikipedia.org/wiki/Fourier_transform">Fourier transform</a> or <a href="https://mathworld.wolfram.com/MaximumEntropyMethod.html"> Maximum Entropy Method (MEM)</a> and the peaks are fitted 
 to <a href="https://en.wikipedia.org/wiki/Cauchy_distribution">Lorentzian functions</a> to extract the phonon anharmonic properties.
-<br>The theoretical background in which this software is based on is summarized in the following work. If you use this software please cite it:
+<br>The theoretical background on which this software is based is summarized in the following work. If you use this software, please cite it:
 <LI> A. Carreras, A. Togo, I. Tanaka,<em> DynaPhoPy: A code for extracting phonon quasiparticles from molecular dynamics simulations</em>, Computer Physics Communications (2017).
     
 (<a href="https://doi.org/10.1016/j.cpc.2017.08.017">Journal link</a>, <a href="https://arxiv.org/abs/1708.03435">arXiv link</a>).
